# otus_practice

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  install_prebuild_gtest.sh  main.cpp  statistics.cpp
DynamicArray/: DynamicArray.h
LinkedList/: LinkedList.h
homework2/: CMakeLists.txt  game.cpp  mapUtils.cpp  mapUtils.h  stringUtils.cpp  stringUtils.h
homework3/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
homework4/: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Dust.cpp  Dust.hpp  Physics.cpp  Point.hpp  Velocity.hpp  World.cpp  main.cpp
homework_1/: CMakeLists.txt  example.cpp  hello_world.cpp  move_me_out.cpp
test/: test.cpp
